# hello-world-docker-action

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  action.yml  build.rs
.cargo/: config.toml
.github/workflows/: docker-image.yml  image.yml  selftest.yml
.image/: Dockerfile  action.yml
fixtures/: event.json
src/: main.rs
