[package]
name = "action"
version = "0.1.0"
authors = ["Christoph Grabo <asaaki@mannaz.cc>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[features]
default = []

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
envconfig = "0.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
tokio = { version = "1.44.2", features = ["macros"] }
reqwest = { version = "0.12.15", features = ["json", "rustls-tls-webpki-roots"] }
url = { version = "2.5.4", features = ["serde"] }
