[package]
name = "action"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
envconfig = "0.11.1"
reqwest = { version = "0.13.2", features = ["json"] }
rustls-pki-types = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
structopt = "0.3.26"
tokio = { version = "1.51.1", features = ["macros"] }
url = { version = "2.5.8", features = ["serde"] }
webpki-root-certs = "1.0.6"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
